duniverse/lwt/test/ppx_expect/cases/let_4.ml
let _ =
  let%lwt foo = Lwt.return () and bar = Lwt.return 5 in
  Lwt.return (foo + bar);;
